[project]
name = "async-argon2"
version = "0.1.0"
description = "An asynchronous wrapper on Argon2 that runs a CPU task in a separate thread."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "hotpotato89", email = "ramilreading@gmail.com" }
]

dependencies = [
    "argon2-cffi>=25.1.0",
    "passlib>=1.7.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/async_argon2"]

[tool.hatch.build.targets.sdist]
only-include = [
    "src",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]