[project]
name = "async-argon2"
version = "1.0.0"
description = "An asynchronous wrapper on Argon2 that runs a CPU task in a separate thread."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "hotpotato89", email = "ramilreading@gmail.com" }
]

dependencies = [
    "argon2-cffi>=25.1.0",
    "passlib>=1.7.4",
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/async_argon2"]

[tool.hatch.build.targets.sdist]
only-include = [
    "src",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
asyncio_mode="auto"
testpaths=["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:passlib.handlers.argon2",
]
